sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:17: error: ';' expected but string literal found.
    print " "
          ^